error8.txt
node : C:\Users\Alegomes\D
esktop\CineCash por 
IA\temp.mjs:1043
No linha:1 caractere:1
+ node -c temp.mjs 2> 
error.txt; Get-Content 
error.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo        
      : NotSpecified: (C  
  :\Users\Alegom...A\te   
 mp.mjs:1043:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
  if(!confirm('Confirmar 
aprova├º├úo de R$ '+Number
(amount).toFixed(2)+'?
                          
                          
                 ^^

SyntaxError: Invalid or 
unexpected token
    at checkSyntax (node:i
nternal/main/check_syntax:
72:5)

Node.js v24.14.1
